--- a/src/app/animes/animes.component.css
+++ b/src/app/animes/animes.component.css
@@ -1,11 +1,11 @@
 table {
     width: 100%;
 }
-table, th, td {
+/* table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
-}
-th, td {
+} */
+td {
     padding: 5px;
     text-align: left;
 }
@@ -19,8 +19,20 @@ th {
     background-color: black;
     color: white;
 }
+th:nth-child(1) {
+    text-align: center;
+}
+th:nth-child(2) {
+    text-align: center;
+}
 td:nth-child(1) {
     white-space: nowrap;
+}
+td:nth-child(2) {
+    padding-left: 20px;
+}
+td:nth-child(4) {
+    text-align: center;
 }
 a:link {
     color: black;
